--- a/deploy/htdocs/version/src/inc/style/component/slideout-panel/_default-slideout-panel.scss
+++ b/deploy/htdocs/version/src/inc/style/component/slideout-panel/_default-slideout-panel.scss
@@ -34,6 +34,10 @@
 	&.is-open {
 		transform: translate(0, 0);
 	}
+
+	@include respond-to(SMALL) {
+		max-width: 100%;
+	}
 }
 
 .slideout-panel-mask {
