--- a/deploy/htdocs/version/src/inc/style/type/_copy.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_copy.scss
@@ -25,6 +25,9 @@
 	.copy-01 {
 		font-size: mobile-size(2.8rem);
 	}
+	.copy-02 {
+		font-size: mobile-size(2.2rem);
+	}
 	.copy-03 {
 		font-size: mobile-size(2.8rem);
 	}
