Tweak BlogPost on Small Breakpoint.

--- a/deploy/htdocs/version/src/inc/style/type/_heading.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_heading.scss
@@ -62,6 +62,9 @@
 	.heading-01 {
 		font-size: mobile-size(8rem);
 	}
+	.heading-02 {
+		font-size: mobile-size(4.5rem);
+	}
 	.heading-03 {
 		font-size: mobile-size(5rem);
 	}
