--- a/deploy/htdocs/version/src/inc/style/asset/link/_link-main.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/link/_link-main.scss
@@ -1,6 +1,6 @@
 .link-main {
 	position: relative;
-	font: 700 1rem / 1.3rem $fontOpenSans;
+	font: 700 1rem / 1.3 $fontOpenSans;
 	text-transform: uppercase;
 	display: inline-block;
 	color: currentColor;
@@ -19,5 +19,9 @@
 		&:before {
 			width: 100%;
 		}
+	}
+
+	@include respond-to(SMALL) {
+		font-size: mobile-size(1.83rem);
 	}
 }
