--- a/deploy/htdocs/version/src/inc/style/component/block/_block-blog-post.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-blog-post.scss
@@ -6,7 +6,7 @@
 	}
 
 	.date {
-		font: 700 1rem / 1.3rem $fontOpenSans;
+		font: 700 1rem / 1.3 $fontOpenSans;
 		margin-bottom: $sizeGrid/2;
 		text-transform: uppercase;
 	}
@@ -65,6 +65,50 @@
 
 		.heading {
 			padding-bottom: $sizeGrid/2;
+		}
+	}
+
+	@include respond-to(SMALL) {
+
+		.date {
+			font-size: mobile-size(2.4rem);
+			margin-bottom: $sizeGrid;
+		}
+
+		.profile-image {
+			@include size($sizeGrid*1.5);
+		}
+
+		.blog-post-bar {
+			height: auto;
+			margin-top: $sizeGrid;
+			display: block;
+			padding-bottom: $sizeGrid/2;
+		}
+
+		.site-frame {
+			padding-left: $sizeGrid*2;
+			padding-right: $sizeGrid*2;
+		}
+
+		.blog-details {
+			margin-top: $sizeGrid/2;
+
+			li {
+				font-size: mobile-size(1.83rem);
+
+				&:not(:first-child) {
+					margin-left: $sizeGrid;
+				}
+			}
+		}
+
+		.description {
+			padding-top: $sizeGrid*2;
+
+			.heading {
+				padding-bottom: $sizeGrid;
+			}
 		}
 	}
 }
