--- a/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
@@ -13,4 +13,21 @@
 	p {
 		@extend %copy-01;
 	}
+
+	// Breakpoints
+	@include respond-to(SMALL) {
+		.site-frame {
+			padding-left: $sizeGrid;
+			padding-right: $sizeGrid;
+		}
+
+		h1,h2,h3,h4 {
+			font-size: mobile-size(3.5rem);
+			padding-bottom: $sizeGrid;
+		}
+
+		p {
+			font-size: mobile-size(2.8rem);
+		}
+	}
 }
