Tweak BlockInfo Breakpoint Small.

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
@@ -60,6 +60,34 @@
 		.description {
 			width: calc(100% - #{$sizeGrid*3.5});
 		}
+	}
 
+	// Breakpoints
+	@include respond-to(SMALL) {
+		padding-left: $sizeGrid;
+		padding-right: $sizeGrid;
+
+		&.windowed {
+			border: none;
+		}
+
+		.inner-content {
+			position: relative;
+			display: block;
+			padding: $sizeGrid*3;
+
+			&:before,
+			&:after {
+				right: -$sizeGrid;
+			}
+		}
+
+		.description {
+			width: 100%;
+		}
+
+		.component-button-main {
+			margin-top: $sizeGrid*2;
+		}
 	}
 }
