Tweak StoryInfoImages Breakpoint Small.

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-story-info-images/block-story-info-images.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-story-info-images/block-story-info-images.html
@@ -1,5 +1,5 @@
 <div class="component-block-story-info-images">
-	<div class="abs-fill">
+	<div class="story-wrapper abs-fill">
 		<div class="story-images" data-bind="foreach: data.stories">
 			<div class="image-wrapper abs-fill" data-bind="css: {'is-active': $index() === $root.activeStory()}">
 				<div class="default-image">
