Tweak howToAdvertise Breakpoint Small.

--- a/deploy/htdocs/version/src/inc/style/type/_heading.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_heading.scss
@@ -68,6 +68,9 @@
 	.heading-03 {
 		font-size: mobile-size(5rem);
 	}
+	.heading-04 {
+		font-size: mobile-size(4.5rem);
+	}
 	.heading-06 {
 		font-size: mobile-size(5rem);
 	}
