Tweak PathToPurchase Breakpoint Small. (not finished > carousel)

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
@@ -1,5 +1,5 @@
 <div class="component-block-path-to-purchase">
-	<div class="abs-fill">
+	<div class="inner-wrapper abs-fill">
 		<img class="background-image" data-bind="
 			image: {
 				image: data.steps[0].background,
