Tweak PathToPurchase Breakpoint Small. (not finished > carousel)

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
@@ -1,8 +1,8 @@
 <div class="component-block-image-carousel">
 	<div class="overrule-overlap">
 		<div class="slider-viewport infinite-carousel js-image-carousel">
-			<ul class="slides" data-bind="foreach: data.slides">
-				<li class="slide">
+			<ul class="slides js-slides" data-bind="foreach: data.slides">
+				<li class="slide js-slide">
 					<figure class="abs-fill">
 						<img data-bind="
 								image: {
