Added the option to color the hero secondary main triangle

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
@@ -7,7 +7,7 @@
 			}" />
 	</figure>
 	<div class="slide-content-wrapper abs-fill">
-		<div class="background-triangle"></div>
+		<div class="background-triangle" data-bind="style: {borderLeftColor: data.backgroundColor ? data.backgroundColor : 'rgba(0, 48, 87, 0.95)'}"></div>
 		<div class="secondary-background-triangle"></div>
 		<div class="slide-content">
 			<h2 class="heading heading-02" data-bind="html: data.heading"></h2>
