--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-more/block-more.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-more/block-more.html
@@ -1,24 +1,26 @@
 <div class="component-block-more">
-	<div class="overrule-overlap">
-		<header class="header">
-			<h2 class="heading heading-09" data-bind="html: data.heading"></h2>
-			<div class="tags" data-bind="foreach: data.tags">
+	<div class="site-frame">
+		<div class="overrule-overlap">
+			<header class="header">
+				<h2 class="heading heading-09" data-bind="html: data.heading"></h2>
+				<div class="tags" data-bind="foreach: data.tags">
+					<!-- ko component: {
+						name: 'button/button-tag',
+						onComplete: $root.controller.callbackCounter.get(),
+						options: {
+							action: $data,
+							size: $root.ButtonSize.LARGE
+						}
+					} --><!-- /ko -->
+				</div>
+			</header>
+			<div class="latest-articles" data-bind="foreach: data.articles">
 				<!-- ko component: {
-					name: 'button/button-tag',
+					name: 'block/block-article-teaser',
 					onComplete: $root.controller.callbackCounter.get(),
-					options: {
-						action: $data,
-						size: $root.ButtonSize.LARGE
-					}
+					options: $data
 				} --><!-- /ko -->
 			</div>
-		</header>
-		<div class="latest-articles" data-bind="foreach: data.articles">
-			<!-- ko component: {
-				name: 'block/block-article-teaser',
-				onComplete: $root.controller.callbackCounter.get(),
-				options: $data
-			} --><!-- /ko -->
 		</div>
 	</div>
 </div>
