--- a/deploy/htdocs/version/src/inc/style/component/block/_block-more.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-more.scss
@@ -32,4 +32,30 @@
 			margin-bottom: $sizeGrid * 2;
 		}
 	}
+
+	@include respond-to(SMALL) {
+		.latest-articles {
+			padding-left: $sizeGrid;
+			padding-right: $sizeGrid;
+
+
+			.component-block-article-teaser:not(:first-child) {
+				display: none;
+			}
+
+		}
+
+		.header {
+			padding-left: $sizeGrid*2;
+			padding-right: $sizeGrid*2;
+
+			.heading {
+				margin-bottom: $sizeGrid*2;
+			}
+
+			.component-button-main {
+				margin-bottom: $sizeGrid*2;
+			}
+		}
+	}
 }
