--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -79,6 +79,12 @@
 		color: $colorWhite;
 	}
 
+	.component-paginator-dashed {
+		position: absolute;
+		@include pos(50%, $sizeGrid, auto, auto);
+		transform: translateY(-50%);
+		z-index: 2;
+	}
 
 	@include respond-to(SMALL){
 		min-height: 0;
