--- a/deploy/htdocs/version/src/inc/style/component/block/_block-network-overview.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-network-overview.scss
@@ -45,4 +45,12 @@
 			}
 		}
 	}
+
+	@include respond-to(SMALL) {
+		padding-bottom: $sizeGrid*3;
+
+		.network-list-item {
+			@include size(calc(100vw / 2));
+		}
+	}
 }
