--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -1,4 +1,4 @@
-<div class="component-block-hero-main">
+<div class="component-block-hero-main" data-bind="css: {'has-statistics': $data.hasStatistics()}">
 	<!-- ko component: {
 		name: 'image-crossfader',
 		onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller))
