reduced logo size on mobile

--- a/deploy/htdocs/version/src/inc/style/component/_header.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_header.scss
@@ -39,5 +39,9 @@
 		@include size(100%, $sizeGrid * 4);
 		background: $colorWhite;
 		transform: none;
+
+		.logo {
+			left: $sizeGrid * 2;
+		}
 	}
 }
