--- a/deploy/htdocs/version/src/inc/style/component/button/_button-circle-close.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-circle-close.scss
@@ -26,4 +26,15 @@
 			color: white;
 		}
 	}
+
+	@include respond-to(SMALL) {
+
+		&.large {
+			@include size($sizeGrid*1.5);
+
+			.icon {
+				@include size(6px);
+			}
+		}
+	}
 }
