--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -25,6 +25,7 @@ $sizeGrid: 4rem;
 $sizeGridSecondary: 3rem;
 $sizeGridMobile: 3.2rem;
 $sizeHeader: $sizeGrid * 2;
+$sizeHeaderMobile: $sizeGrid*4;
 
 /**
  * Site frame sizes
