Fixed audio fragment block for mobile

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-audio-fragment.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-audio-fragment.scss
@@ -3,29 +3,43 @@
 	.details {
 		margin-top: $sizeGrid / 2;
 		vertical-align: middle;
+	}
 
-		.profile-image,
-		.copy {
-			display: inline-block;
-			vertical-align: middle;
-		}
+	.profile-image,
+	.copy {
+		display: inline-block;
+		vertical-align: middle;
+	}
 
-		.profile-image {
-			@include size($sizeGrid);
-			border-radius: 100%;
-			overflow: hidden;
+	.profile-image {
+		@include size($sizeGrid);
+		border-radius: 100%;
+		overflow: hidden;
 
-			img {
-				@include size(100%);
-			}
-		}
-
-		.copy {
-			margin-left: $sizeGrid / 2;
+		img {
+			@include size(100%);
 		}
 	}
 
+	.copy {
+		margin-left: $sizeGrid / 2;
+	}
+
+
 	.component-audio-player {
 		margin-top: $sizeGrid * 2;
+	}
+
+	@include respond-to(SMALL) {
+		padding: 0 $sizeGrid * 2;
+
+		.profile-image {
+			@include size($sizeGrid * 2);
+		}
+
+		.copy {
+			margin-left: $sizeGrid;
+		}
+
 	}
 }
