--- a/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
@@ -3,7 +3,7 @@
 	@include pos(0, 0, auto, auto);
 	@include size($size / 2, $size);
 	position: absolute;
-	transform: translateY(0);
+	transform: translate(calc(100% - #{$sizeGrid * 2}), 0);
 	color: #fff;
 	text-align: right;
 	display: none; // temp
