--- a/deploy/htdocs/version/src/inc/style/type/_heading.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_heading.scss
@@ -71,11 +71,13 @@
 	.heading-04 {
 		font-size: mobile-size(4.5rem);
 	}
+	.heading-05 {
+		font-size: mobile-size(4.5rem);
+	}
 	.heading-06 {
 		font-size: mobile-size(5rem);
 	}
 	.heading-07 {
 		font-size: mobile-size(3.5rem);
 	}
-
 }
