--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -5,14 +5,19 @@
 				<ul class="menu-items" data-bind="foreach: dataManager.settingsModel.initDataModel.navigationModel.getAllItems()">
 
 					<li class="menu-item">
+
 						<!-- ko if: $data.link.target !== $root.Routes.CONTACT_US -->
 							<!-- ko with: $data.link -->
-								<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: $data.target}], html: $data.label"></a>
+								<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: $data.target}]">
+									<span class="label" data-bind="html: $data.label"></span>
+								</a>
 							<!-- /ko -->
 						<!-- /ko -->
 
 						<!-- ko if: $data.link.target == $root.Routes.CONTACT_US -->
-							<button class="button main-link" data-bind="tap: $root.handleClickContact.bind($root), html: $data.link.label"></button>
+							<button class="button main-link" data-bind="tap: $root.handleClickContact.bind($root)">
+								<span class="label" data-bind="html: $data.label"></span>
+							</button>
 						<!-- /ko -->
 
 						<!-- ko if: $data.subtitle -->
