Update the audio fragment

--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -16,7 +16,7 @@
 
 						<!-- ko if: $data.link.target == $root.Routes.CONTACT_US -->
 							<button class="button main-link" data-bind="tap: $root.handleClickContact.bind($root)">
-								<span class="label" data-bind="html: $data.label"></span>
+								<span class="label" data-bind="html: $data.link.label"></span>
 							</button>
 						<!-- /ko -->
 
