--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-audio-fragment/block-audio-fragment.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-audio-fragment/block-audio-fragment.html
@@ -1,23 +1,25 @@
 <div class="component-block-audio-fragment">
-	<h2 class="heading heading-05" data-bind="html: data.heading"></h2>
-	<div class="details">
-		<figure class="profile-image">
-			<img data-bind="
-				image: {
-					image: data.image,
-					state: $root.deviceState()
-				}" />
-		</figure>
-		<p class="copy copy-01">
-			<strong data-bind="html: data.name"></strong> |
-			<span data-bind="html: data.description"></span>
-		</p>
+	<div class="site-frame">
+		<h2 class="heading heading-05" data-bind="html: data.heading"></h2>
+		<div class="details">
+			<figure class="profile-image">
+				<img data-bind="
+					image: {
+						image: data.image,
+						state: $root.deviceState()
+					}" />
+			</figure>
+			<p class="copy copy-01">
+				<strong data-bind="html: data.name"></strong> |
+				<span data-bind="html: data.description"></span>
+			</p>
+		</div>
+		<!-- ko component: {
+			name: 'audio-player',
+			onComplete: $root.controller.callbackCounter.get(),
+			options: {
+				file: data.file
+			}
+		} --><!-- /ko -->
 	</div>
-	<!-- ko component: {
-		name: 'audio-player',
-		onComplete: $root.controller.callbackCounter.get(),
-		options: {
-			file: data.file
-		}
-	} --><!-- /ko -->
 </div>
