--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-play-circle/button-play-circle.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-play-circle/button-play-circle.html
@@ -1,4 +1,4 @@
 <div class="component-button-play-circle button" data-bind="css: size, tap: handleClick, attr: { title: title }">
 	<span class="icon" data-bind="visible: !isPlaying(), icon: 'circle-play'"></span>
-	<span class="icon" data-bind="visible: isPlaying(), icon: 'pause'"></span>
+	<span class="icon" data-bind="visible: isPlaying(), icon: 'circle-pause'"></span>
 </div>
