--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-persona-selector/block-persona-selector.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-persona-selector/block-persona-selector.html
@@ -7,23 +7,24 @@
 	</div>
 	<div class="persona-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
-		<div class="persona-content" data-bind="with: data.personas[$root.activeIndex()]">
-			<h2 class="heading heading-04" data-bind="html: $data.heading"></h2>
-			<p class="copy copy-01" data-bind="html: $data.paragraph"></p>
-			<!-- ko component: {
-					name: 'button/button-main',
-					onComplete: $root.controller.callbackCounter.get(),
-					options: {
-						action: $data.link,
-						size: $root.ButtonSize.LARGE
-					}
-				} --><!-- /ko -->
+		<div class="persona-content" data-bind="foreach: data.personas">
+			<div class="persona abs-center">
+				<h2 class="heading heading-04" data-bind="html: $data.heading"></h2>
+				<p class="copy copy-01" data-bind="html: $data.paragraph"></p>
+				<!-- ko component: {
+						name: 'button/button-main',
+						onComplete: $root.controller.callbackCounter.get(),
+						options: {
+							action: $data.link,
+							size: $root.ButtonSize.LARGE
+						}
+					} --><!-- /ko -->
+			</div>
 		</div>
 	</div>
 	<ul class="persona-options" data-bind="foreach: data.personas">
 		<li class="persona-option" data-bind="css: {'is-active': $root.activeIndex() === $index()}, events: [
-			[$root.MouseEventHelper.MOUSEENTER, $root.handleMouseEnter.bind($root, $index())],
-			[$root.MouseEventHelper.MOUSELEAVE, $root.handleMouseLeave.bind($root, $index())],
+			[$root.MouseEventHelper.CLICK, $root.handleClick.bind($root, $index())]
 		]">
 			<button class="persona-button button" data-bind="css: $root.PersonaType[personaType].toLowerCase()">
 				<span class="label-wrapper">
