--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
@@ -2,7 +2,7 @@
 	<div class="site-frame">
 		<!-- ko component: {
 			name: 'filter-menu',
-			onComplete: $root.controller.callbackCounter.get(),
+			onComplete: $root.controller.callbackCounter.get($root.controller.handleFilterMenuReady.bind($root.controller)),
 			options: {
 				filters: filters,
 				label: filterLabel
