Fix filter functionality

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
@@ -20,4 +20,6 @@
 
 		<!-- todo need design: load more/pagination -->
 	</div>
+
+	<div class="form-loader js-loader"><div class="loader abs-center"></div></div>
 </div>
